--- a/index.html
+++ b/index.html
@@ -164,11 +164,10 @@ lang="en">
     "hero">
       <div class="logo">
         <div class="hero__title-wrapper">
-          <h1 class="hero__title">Need a next level Webflow
-          website?</h1>
+          <h1 class="hero__title">Gugulethu Nyatsumba</h1>
         </div>
         <div class="hero__subtitle">
-          You do!? Scroll down...
+          Official Site
         </div>
       </div>
       <div class="hero__line"></div>
@@ -192,7 +191,7 @@ lang="en">
     "white-section">
       <div class="white-section__container">
         <div class="section__title section__title--center">
-          Discover
+          Featured
         </div>
         <div style="opacity:0" class="w-layout-grid project-grid">
           <div id=
