--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ lang="en">
             data-duration="0" data-ix2-initial-state="0" class=
             "button-link__icon"></div></a>
           </div>
---->
+
 
 
           <div id=
@@ -536,6 +536,10 @@ lang="en">
           class="project-wrapper templates"></div>
         </div>
       </div>
+
+
+---->
+
       <div class="contact-section">
         <div class="w-container">
           <div class="section__title--contact">
@@ -563,20 +567,23 @@ lang="en">
           <div class="social-wrapper">
             <div>
               Find me on
-            </div><a href="https://twitter.com/AaronGrieve" target=
+            </div><a href="https://twitter.com/" target=
             "_blank" class=
             "footer__social-link w-inline-block"><img src=
             "https://assets.website-files.com/5d2881857c51a204b16f3a1a/5d70fc909b8d7b61048c5718_icons8_twitter_squared.svg"
             alt="Twitter Logo" class=
             "social-link__icon"></a><a href=
-            "https://webflow.grsm.io/webflow-profile" target=
+            "#" target=
             "_blank" class=
             "footer__social-link w-inline-block"><img src=
             "https://assets.website-files.com/5d2881857c51a204b16f3a1a/5d70fd7e3f57a53bf167305e_Webflow%20Logo.svg"
-            alt="Webflow Logo" class="social-link__icon"></a>
+            alt="Youtube Logo" class="social-link__icon"></a>
           </div>
         </div>
       </div>
+
+
+
       <div class="business-booster-program wf-section">
         <div class="container">
           <h1>Business Booster Program</h1>
