--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Digital Content Creator & Influencer | Gugulethu Nyatsumba</title>
+  <title>Digital Marketing Consultant & Web Developer | Michael Lowry</title>
   <meta content=
-  "Freelance Web & Graphic Designer based in Kent, UK. Building beautiful and interactive websites for a worldwide collection of clients."
+  "I am a freelance Web Developer & Digital Marketing Consultant based in Johannesburg, South Africa. Building beautiful and interactive digital experiences for my clients."
   name="description">
   <meta content=
-  "Digital Content Creator & Influencer | Gugulethu Nyatsumba" property=
+  "Digital Marketing Consultant & Web Developer | Michael Lowry" property=
   "og:title">
   <meta content=
-  "Freelance Web & Graphic Designer based in Kent, UK. Building beautiful and interactive websites for a worldwide collection of clients."
+  "I am a freelance Web Developer & Digital Marketing Consultant based in Johannesburg, South Africa. Building beautiful and interactive digital experiences for my clients."
   property="og:description">
   <meta content=
-  "Digital Content Creator & Influencer | Gugulethu Nyatsumba" property=
+  "Digital Marketing Consultant & Web Developer | Michael Lowry" property=
   "twitter:title">
   <meta content=
-  "Freelance Web & Graphic Designer based in Kent, UK. Building beautiful and interactive websites for a worldwide collection of clients."
+  "I am a freelance Web Developer & Digital Marketing Consultant based in Johannesburg, South Africa. Building beautiful and interactive digital experiences for my clients."
   property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -164,7 +164,7 @@ lang="en">
     "hero">
       <div class="logo">
         <div class="hero__title-wrapper">
-          <h1 class="hero__title">Gugulethu Nyatsumba</h1>
+          <h1 class="hero__title">Michael Lowry</h1>
         </div>
         <div class="hero__subtitle">
           Official Site
@@ -182,7 +182,7 @@ lang="en">
       "lottie-intro"></div>
       <div class="container cc--intro">
         <div class="section__title section__title--intro">
-          I'm Gugu, I create digital content on my YouTube channel and I just started my very first podcast series.
+        I specialize in creating cost-effective digital strategies and building world-class websites for my clients.
          
         </div>
       </div>
@@ -191,14 +191,14 @@ lang="en">
     "white-section">
       <div class="white-section__container">
         <div class="section__title section__title--center">
-          Featured
+          Featured Projects
         </div>
         <div style="opacity:0" class="w-layout-grid project-grid">
           <div id=
           "w-node-d092d2a8-d302-1096-34ed-b397e49189e4-e547ea13"
           class="project__grid">
             <div class="project__title">
-              Uncomfortable Growth
+              Monogamy Digital
             </div>
             <p class="project__p">MB Ramen Shop from Long
             Island in New York got in touch wanting to create an
@@ -214,7 +214,7 @@ lang="en">
             "button-link w-inline-block">
             <div style="width:0%" class="button-bg"></div>
             <div class="text-link-text">
-              Visit my YouTube channel
+              Visit the live site
             </div>
             <div data-w-id="d092d2a8-d302-1096-34ed-b397e49189f1"
             data-animation-type="lottie" data-src=
@@ -266,7 +266,7 @@ lang="en">
           </div>
          
 
-<!---
+
 
  <div id=
           "w-node-c1e774f0-5796-b761-bd21-535d0db624e2-e547ea13"
@@ -538,7 +538,6 @@ lang="en">
       </div>
 
 
----->
 
       <div class="contact-section">
         <div class="w-container">
@@ -547,19 +546,19 @@ lang="en">
           </div>
           <div data-w-id="8c93aa77-a664-bf95-d2a9-54f270251a51"
           class="email-link-wrapper">
-            <p>Email me <a href="mailto:aaron@digitalbake.co.uk"
+            <p>Email me <a href="mailto:mykeyfr@icloud.com"
             id="email-link" class=
-            "email-link-2 text">aaron@digitalbake.co.uk</a></p>
+            "email-link-2 text">mykeyfr@icloud.com</a></p>
             <div style=
             "-webkit-transform:translate3d(0, -10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -10PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);display:none;opacity:0"
             class="email-link__tooltip">
-              <a data-clipboard-text="aaron@aarongrieve.co.uk"
+              <a data-clipboard-text="mykeyfr@icloud.com"
               data-w-id="8c93aa77-a664-bf95-d2a9-54f270251a57"
               href="#" class="clipboard w-button">Copy email to
               clipboard</a>
               <div class="email-link__divider"></div>
               <div>
-                <a href="mailto:aaron@digitalbake.co.uk" class=
+                <a href="mailto:mykeyfr@icloud.com" class=
                 "email-link-2">Email with mail client</a>
               </div>
             </div>
@@ -567,17 +566,17 @@ lang="en">
           <div class="social-wrapper">
             <div>
               Find me on
-            </div><a href="https://twitter.com/" target=
+            </div><a href="https://twitter.com/mykeynotyours" target=
             "_blank" class=
             "footer__social-link w-inline-block"><img src=
             "https://assets.website-files.com/5d2881857c51a204b16f3a1a/5d70fc909b8d7b61048c5718_icons8_twitter_squared.svg"
             alt="Twitter Logo" class=
             "social-link__icon"></a><a href=
-            "#" target=
+            "https://instagram.com/mykeynotyours_" target=
             "_blank" class=
             "footer__social-link w-inline-block"><img src=
             "https://assets.website-files.com/5d2881857c51a204b16f3a1a/5d70fd7e3f57a53bf167305e_Webflow%20Logo.svg"
-            alt="Youtube Logo" class="social-link__icon"></a>
+            alt="Instagram Logo" class="social-link__icon"></a>
           </div>
         </div>
       </div>
