--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ lang="en">
     "hero">
       <div class="logo">
         <div class="hero__title-wrapper">
-          <h1 class="hero__title">Michael Lowry</h1>
+          <h1 class="hero__title">Michael Lowry, a digital marketing consultant and web developer.</h1>
         </div>
         <div class="hero__subtitle">
           Official Site
