--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@ lang="en">
   </style>
 </head>
 <body>
+
+
+
   <div style="opacity:0" class="copied-wrapper">
     <div data-w-id="cd06bcdc-a77f-117d-af1a-532a60becdaf"
     data-animation-type="lottie" data-src=
@@ -126,27 +129,27 @@ lang="en">
         width="50" data-w-id="52fe6819-b14c-3f52-f661-96c4c2ffa994"
         alt=""><img src=
         "https://assets.website-files.com/5d2881857c51a204b16f3a1a/5d2de36999a69031023fb76a_White%20AG%20Logo%202018.svg"
-        width="50" alt="" class="nav__logo-blk"></a>
+        width="50" alt="Michael Lowry Logo" class="nav__logo-blk"></a>
       </div>
       <div class="navbar__menu-wrapper">
         <a data-w-id="52fe6819-b14c-3f52-f661-96c4c2ffa997" href=
-        "mailto:aaron@digitalbake.co.uk" class=
+        "mailto:mykeyfr@icloud.com" class=
         "navbar__button w-inline-block">
         <div class="email-link">
-          aaron@digitalbake.co.uk
+          mykeyfr@icloud.com
         </div></a>
       </div>
     </div>
     <div class="navbar navbar--right">
       <div class="navbar-right__webflow-message">
-        <a href="https://webflow.grsm.io/aaron-grieve-templates"
+        <a href="https://monogamy.co.za"
         target="_blank" class="navbar__button w-inline-block">
         <div class="templates-link">
-          Webflow Templates
+         Monogamy Digital
         </div></a><a href="http://www.thedigitalbake.com" target=
         "_blank" class="navbar__button w-inline-block">
         <div class="components-link">
-          Copy/Paste components
+          Affiliates
         </div></a>
       </div>
       <div class="navigation">
@@ -164,7 +167,7 @@ lang="en">
     "hero">
       <div class="logo">
         <div class="hero__title-wrapper">
-          <h1 class="hero__title">Michael Lowry, a digital marketing consultant and web developer.</h1>
+          <h1 class="hero__title">Michael Lowry is a digital marketing consultant and web developer based in South Africa.</h1>
         </div>
         <div class="hero__subtitle">
           Official Site
@@ -172,6 +175,10 @@ lang="en">
       </div>
       <div class="hero__line"></div>
     </div>
+
+
+
+
     <div class="intro-section">
       <div data-w-id="8c93aa77-a664-bf95-d2a9-54f2702519f9"
       data-animation-type="lottie" data-src=
@@ -191,7 +198,7 @@ lang="en">
     "white-section">
       <div class="white-section__container">
         <div class="section__title section__title--center">
-          Features
+          Featured
         </div>
         <div style="opacity:0" class="w-layout-grid project-grid">
           <div id=
@@ -238,10 +245,7 @@ lang="en">
             <div class="project__title">
               Black Leopards FC
             </div>
-            <p class="project__p">Available on all major <a href=
-            "/podcast" target=
-            "_blank">digital streaming platforms</a> to build the new home for
-            the world famous Sidemen team.<br></p>
+            <p class="project__p">I was recently hired by a partner agency to revamp an entire website for one of their most high-profile clients. Black Leopards is a well established soccer team based in Limpopo. After months of continuous tweaking and updates, their digital presence has been greatly enhanced as a result of their modern website design.<br></p>
             <div class="project__credits">
               Creative Direction — Michael Lowry<br>
             </div>
