--- a/index.html
+++ b/index.html
@@ -5,26 +5,12 @@
 "5e25f51710cdbb10a19fbb21" data-wf-site="5d977e03b3e1729167d79d72">
 <head>
   <meta charset="utf-8">
-  <title>Next Up - Webflow Ecommerce website template</title>
+  <title>MYKEYNOTYOURS - Official Site/title>
   <meta content=
-  "The last music artist website you will ever need. Showcase your music, sell show tickets & merchandise and create a responsive digital press kit, all without writing a single line of code."
+  "South African born and raised rapper Mykey has an extensive catalog of albums and singles to his name including $ignfeld, Grown A$$ Kid, BLANK & Halfway House, to name a few. He has collaborated with several well-known producers and artists such as 808x, Dooushii, Southside Mohammed, Tyson S.T, Miles, The Big Hash, and Ginger Trill, to name a few."
   name="description">
-  <meta content="Next Up - Webflow Ecommerce website template"
-  property="og:title">
-  <meta content=
-  "The last music artist website you will ever need. Showcase your music, sell show tickets & merchandise and create a responsive digital press kit, all without writing a single line of code."
-  property="og:description">
-  <meta content=
-  "https://assets.website-files.com/5d977e03b3e1729167d79d72/5e250bc45cbbd61f63248fbd_anastase-maragos-wH0anA_G7sw-unsplash%20(1).jpg"
-  property="og:image">
-  <meta content="Next Up - Webflow Ecommerce website template"
-  property="twitter:title">
-  <meta content=
-  "The last music artist website you will ever need. Showcase your music, sell show tickets & merchandise and create a responsive digital press kit, all without writing a single line of code."
-  property="twitter:description">
-  <meta content=
-  "https://assets.website-files.com/5d977e03b3e1729167d79d72/5e250bc45cbbd61f63248fbd_anastase-maragos-wH0anA_G7sw-unsplash%20(1).jpg"
-  property="twitter:image">
+ 
+ 
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name=
@@ -381,12 +367,12 @@
             <div role="list" class="w-dyn-items">
               <div role="listitem" class=
               "artist-social-icons w-dyn-item">
-                <a href="https://facebook.com" target="_blank"
+                <a href="https://facebook.com/mykeynotyours" target="_blank"
                 class="facebook-profile w-inline-block"><img src=
                 "https://assets.website-files.com/5d977e03b3e1729167d79d72/5e2611b47f6bfd2b33af1ad3_facebook-logo.svg"
                 alt="Facebook Icon" class=
                 "nav-social-icon"></a><a href=
-                "https://instagram.com" target="_blank" class=
+                "https://instagram.com/mykeynotyours_" target="_blank" class=
                 "instagram-profile w-inline-block"><img src=
                 "https://assets.website-files.com/5d977e03b3e1729167d79d72/5e261190628e30061d8cfd28_instagram.svg"
                 alt="Instagram Icon" class=
@@ -410,7 +396,7 @@
                 "bandcamp-profile w-inline-block"><img src=
                 "https://assets.website-files.com/5d977e03b3e1729167d79d72/5e2612a0345c1e6abd35a7c7_bandcamp.svg"
                 alt="Bandcamp Icon" class=
-                "nav-social-icon"></a><a href="https://twitter.com"
+                "nav-social-icon"></a><a href="https://twitter.com/mykeynotyours"
                 target="_blank" class=
                 "twitter-profile w-inline-block"><img src=
                 "https://assets.website-files.com/5d977e03b3e1729167d79d72/5e26124ed236c5d39e7ce23b_twitter.svg"
@@ -440,14 +426,14 @@
                 <div class="out-now-line"></div>
                 <h5 class="subheading">Out Now</h5>
               </div>
-              <h1 class="white">Real Talk</h1>
+              <h1 class="white">Inertia</h1>
               <div class="purchase-links hero-links">
-                <a href="https://webflow.com" target="_blank"
-                class="purchase-link stream hero-link">Stream</a><a href="https://webflow.com"
+                <a href="https://unitedmasters.com/m/inertia-ep" target="_blank"
+                class="purchase-link stream hero-link">Stream Now</a><a href="#"
                 target="_blank" class=
-                "purchase-link download hero-link">Download</a><a href="https://webflow.com"
+                "purchase-link download hero-link">Download Now</a><a href="https://webflow.com"
                 target="_blank" class=
-                "purchase-link buy hero-link">Buy</a>
+                "purchase-link buy hero-link">Buy On iTunes</a>
               </div>
             </div>
           </div>
@@ -471,16 +457,16 @@
                 <p class="category-label">Album</p>
               </div>
               <div class="release-meta">
-                <h3 class="product-title">Real Talk</h3>
-                <p>Gee Tizzly</p>
+                <h3 class="product-title">Inertia</h3>
+                <p>Just Released!</p>
                 <div class="item-divider"></div>
                 <div class="purchase-links">
-                  <a href="https://webflow.com" class=
-                  "purchase-link stream">Stream</a><a href=
-                  "https://webflow.com" class=
-                  "purchase-link download">Download</a><a href=
-                  "https://webflow.com" class=
-                  "purchase-link buy">Buy</a>
+                  <a href="#" class=
+                  "purchase-link stream">Apple Music</a><a href=
+                  "#" class=
+                  "purchase-link download">Spotify</a><a href=
+                  "#" class=
+                  "purchase-link buy">SoundCloud</a>
                 </div>
               </div>
             </div>
@@ -496,15 +482,15 @@
                 <p class="category-label">Single</p>
               </div>
               <div class="release-meta">
-                <h3 class="product-title">Up In Smoke</h3>
-                <p>Gee Tizzley feat. Ice Pak</p>
+                <h3 class="product-title">VO$$</h3>
+                <p>feat. Slay'By Lann & Shouldbeyuang</p>
                 <div class="item-divider"></div>
                 <div class="purchase-links">
-                  <a href="https://webflow.com" class=
+                  <a href="#" class=
                   "purchase-link stream">Stream</a><a href=
-                  "https://webflow.com" class=
+                  "#" class=
                   "purchase-link download">Download</a><a href=
-                  "https://webflow.com" class=
+                  "#" class=
                   "purchase-link buy w-condition-invisible">Buy</a>
                 </div>
               </div>
@@ -521,19 +507,21 @@
                 <p class="category-label">Mixtape</p>
               </div>
               <div class="release-meta">
-                <h3 class="product-title">Da Bronx</h3>
-                <p>Gee Tizzly feat. Kale & Wheezy</p>
+                <h3 class="product-title">$IGNFELD</h3>
+                <p>Produced by Dooushii</p>
                 <div class="item-divider"></div>
                 <div class="purchase-links">
-                  <a href="https://webflow.com" class=
-                  "purchase-link stream">Stream</a><a href=
+                  <a href="#" class=
+                  "purchase-link stream">Apple Music</a><a href=
                   "https://webflow.com" class=
-                  "purchase-link download">Download</a><a href=
-                  "https://webflow.com" class=
-                  "purchase-link buy w-condition-invisible">Buy</a>
+                  "purchase-link download">Spotify</a><a href=
+                  "" class=
+                  "purchase-link buy w-condition-invisible">SoundCloud</a>
                 </div>
               </div>
             </div>
+
+
             <div data-w-id="b3ee42d4-f748-434a-7af5-6b5e98ab3d42"
             role="listitem" class="release-item w-dyn-item">
               <div class="release-artwork-thumb">
@@ -543,19 +531,19 @@
                 <p class=
                 "category-label featured-release w-condition-invisible">
                 Featured</p>
-                <p class="category-label">Single</p>
+                <p class="category-label">Playlist</p>
               </div>
               <div class="release-meta">
-                <h3 class="product-title">Up In Smoke Copy</h3>
-                <p>Gee Tizzley feat. Ice Pak</p>
+                <h3 class="product-title">Best of Mykey</h3>
+                <p>feat. Solve The Problem, Thato Saul, Tyson Sybateli, The Big Hash & More</p>
                 <div class="item-divider"></div>
                 <div class="purchase-links">
-                  <a href="https://webflow.com" class=
-                  "purchase-link stream">Stream</a><a href=
-                  "https://webflow.com" class=
-                  "purchase-link download">Download</a><a href=
-                  "https://webflow.com" class=
-                  "purchase-link buy w-condition-invisible">Buy</a>
+                  <a href="#" class=
+                  "purchase-link stream">Apple Music</a><a href=
+                  "#" class=
+                  "purchase-link download">Spotify</a><a href=
+                  "#" class=
+                  "purchase-link buy w-condition-invisible">SoundCloud</a>
                 </div>
               </div>
             </div>
@@ -584,11 +572,11 @@
                       <p class="category-label">Album</p>
                     </div>
                     <div class="release-meta">
-                      <h3 class="product-title">Real Talk</h3>
-                      <p>Gee Tizzly</p>
+                      <h3 class="product-title">Inertia</h3>
+                      <p>Latest Release</p>
                       <div class="item-divider"></div>
                       <div class="purchase-links">
-                        <a href="https://webflow.com" class=
+                        <a href="#" class=
                         "purchase-link stream">Stream</a><a href=
                         "https://webflow.com" class=
                         "purchase-link download">Download</a><a href="https://webflow.com"
@@ -615,14 +603,14 @@
                       <p class="category-label">Single</p>
                     </div>
                     <div class="release-meta">
-                      <h3 class="product-title">Up In Smoke</h3>
-                      <p>Gee Tizzley feat. Ice Pak</p>
+                      <h3 class="product-title">VO$$</h3>
+                      <p>Innanetwav. (UU)</p>
                       <div class="item-divider"></div>
                       <div class="purchase-links">
-                        <a href="https://webflow.com" class=
+                        <a href="#" class=
                         "purchase-link stream">Stream</a><a href=
-                        "https://webflow.com" class=
-                        "purchase-link download">Download</a><a href="https://webflow.com"
+                        "#" class=
+                        "purchase-link download">Download</a><a href="#"
                         class=
                         "purchase-link buy w-condition-invisible">Buy</a>
                       </div>
@@ -647,7 +635,7 @@
                       <p class="category-label">Mixtape</p>
                     </div>
                     <div class="release-meta">
-                      <h3 class="product-title">Da Bronx</h3>
+                      <h3 class="product-title">$IGNFELD</h3>
                       <p>Gee Tizzly feat. Kale & Wheezy</p>
                       <div class="item-divider"></div>
                       <div class="purchase-links">
@@ -676,20 +664,19 @@
                       <p class=
                       "category-label featured-release w-condition-invisible">
                       Featured</p>
-                      <p class="category-label">Single</p>
+                      <p class="category-label">Playlist</p>
                     </div>
                     <div class="release-meta">
-                      <h3 class="product-title">Up In Smoke
-                      Copy</h3>
-                      <p>Gee Tizzley feat. Ice Pak</p>
+                      <h3 class="product-title">Best of Mykey</h3>
+                      <p> feat. Solve The Problem, Thato Saul, Tyson Sybateli, The Big Hash & more</p>
                       <div class="item-divider"></div>
                       <div class="purchase-links">
-                        <a href="https://webflow.com" class=
-                        "purchase-link stream">Stream</a><a href=
-                        "https://webflow.com" class=
-                        "purchase-link download">Download</a><a href="https://webflow.com"
+                        <a href="#" class=
+                        "purchase-link stream">Apple Music</a><a href=
+                        "#" class=
+                        "purchase-link download">Spotify</a><a href="https://webflow.com"
                         class=
-                        "purchase-link buy w-condition-invisible">Buy</a>
+                        "purchase-link buy w-condition-invisible">SoundCloud</a>
                       </div>
                     </div>
                   </div>
@@ -711,7 +698,7 @@
         </div>
         <div class="inner-container view-all-container">
           <div class="column center">
-            <a href="/music" class="nav-link button">View All
+            <a href="/catalog" target="_blank" class="nav-link button">View All
             Releases</a>
           </div>
         </div>
@@ -1098,6 +1085,8 @@
     </div>
     <h2 class="background-heading">MERCH</h2>
   </div>
+
+
   <div id="shows" data-w-id="ebc681d8-c1ab-dfa0-ff8e-3b4f46934bc3"
   class="section shows wf-section">
     <div class="inner-container">
@@ -1108,49 +1097,49 @@
             style="opacity:0" role="listitem" class=
             "show-item w-dyn-item">
               <div class="show-information">
-                <h3 class="show-title">Coachella</h3>
+                <h3 class="show-title">Instagram</h3>
                 <div class="show-meta">
                   <h5 class="show-date">Apr 18, 2020</h5>
                   <h5 class="show-location">Indio, CA</h5>
                 </div>
               </div><a href="https://webflow.com" class=
-              "nav-link button rsvp">TICKETS</a>
+              "nav-link button rsvp">FOLLOW</a>
             </div>
             <div data-w-id="78f64014-4922-4bf8-5ad2-3736eef1af6c"
             style="opacity:0" role="listitem" class=
             "show-item w-dyn-item">
               <div class="show-information">
-                <h3 class="show-title">Coachella</h3>
+                <h3 class="show-title">Twitter</h3>
                 <div class="show-meta">
-                  <h5 class="show-date">Apr 11, 2020</h5>
-                  <h5 class="show-location">Indio, CA</h5>
+                  <h5 class="show-date">@mykeynotyours</h5>
+                  <h5 class="show-location">2000+ Followers</h5>
                 </div>
               </div><a href="https://webflow.com" class=
-              "nav-link button rsvp">TICKETS</a>
+              "nav-link button rsvp">FOLLOW</a>
             </div>
             <div data-w-id="78f64014-4922-4bf8-5ad2-3736eef1af6c"
             style="opacity:0" role="listitem" class=
             "show-item w-dyn-item">
               <div class="show-information">
-                <h3 class="show-title">Lollapalooza</h3>
+                <h3 class="show-title">YouTube</h3>
                 <div class="show-meta">
-                  <h5 class="show-date">Mar 28, 2020</h5>
-                  <h5 class="show-location">Chile</h5>
+                  <h5 class="show-date">MYKEYNOTYOURS</h5>
+                  <h5 class="show-location">1000+ subscribers</h5>
                 </div>
-              </div><a href="https://webflow.com" class=
-              "nav-link button rsvp">TICKETS</a>
+              </div><a href="#" class=
+              "nav-link button rsvp">SUBSCRIBE</a>
             </div>
             <div data-w-id="78f64014-4922-4bf8-5ad2-3736eef1af6c"
             style="opacity:0" role="listitem" class=
             "show-item w-dyn-item">
               <div class="show-information">
-                <h3 class="show-title">Lollapalooza</h3>
+                <h3 class="show-title">Facebook</h3>
                 <div class="show-meta">
-                  <h5 class="show-date">Mar 27, 2020</h5>
-                  <h5 class="show-location">Argentina</h5>
+                  <h5 class="show-date">MYKEY</h5>
+                  <h5 class="show-location">1500+ likes</h5>
                 </div>
-              </div><a href="https://webflow.com" class=
-              "nav-link button rsvp">TICKETS</a>
+              </div><a href="#" class=
+              "nav-link button rsvp">LIKE</a>
             </div>
           </div>
         </div>
@@ -1163,13 +1152,13 @@
       </div>
     </div>
     <div class="shows-parallax-background"></div>
-    <h2 class="background-heading light-heading">SHOWS</h2>
+    <h2 class="background-heading light-heading">PROFILES</h2>
   </div>
   <div id="subscribe" class="section footer wf-section">
     <div class="inner-container">
       <div class="column center">
         <h3 class="signup-title">Stay Updated</h3>
-        <h5 class="subheading center">the latest Updates Straight
+        <h5 class="subheading center">The latest updates straight
         to your inbox</h5>
         <div class="signup-form w-form">
           <form id="email-form" name="email-form" data-name=
@@ -1212,7 +1201,7 @@
             <div class="w-dyn-list">
               <div role="list" class="w-dyn-items">
                 <div role="listitem" class="w-dyn-item">
-                  <a href="/press-kit/gee-tizzly" target="_blank"
+                  <a href="/press-kit" target="_blank"
                   class="nav-link footer-link">Press Kit</a>
                 </div>
               </div>
@@ -1273,7 +1262,7 @@
           <p class="footer-credits"><a href="https://webflow.com"
           target="_blank" class="footer-credits">Powered by
           Webflow</a></p>
-          <p class="footer-legal">Copyright © 2020. All Rights
+          <p class="footer-legal">© MYKEYNOTYOURS, 2022. All Rights
           Reserved.<br></p>
         </div>
       </div>
