--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div role="listitem" class=
           "logo-container-inner w-dyn-item">
             <a href="/" aria-current="page" class=
-            "w-inline-block w--current"><img alt="Gee Tizzly" src=
+            "w-inline-block w--current"><img alt="MYKEYNOTYOURS" src=
             "https://assets.website-files.com/5e2128fe55fb42829c9b54d7/5e2a653dbe4a74624b200190_next-up-logo%20(1).png"
             class="logo"></a>
           </div>
