--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 "5e25f51710cdbb10a19fbb21" data-wf-site="5d977e03b3e1729167d79d72">
 <head>
   <meta charset="utf-8">
-  <title>MYKEYNOTYOURS - Official Site/title>
+  <title>MYKEYNOTYOURS - Official Site</title>
   <meta content=
   "South African born and raised rapper Mykey has an extensive catalog of albums and singles to his name including $ignfeld, Grown A$$ Kid, BLANK & Halfway House, to name a few. He has collaborated with several well-known producers and artists such as 808x, Dooushii, Southside Mohammed, Tyson S.T, Miles, The Big Hash, and Ginger Trill, to name a few."
   name="description">
