--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com -->
 <!-- Last Published: Tue Oct 05 2021 02:04:49 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-domain="nextup.webflow.io" data-wf-page=
+<html lang="en" data-wf-domain="nextup.webflow.io" data-wf-page=
 "5e25f51710cdbb10a19fbb21" data-wf-site="5d977e03b3e1729167d79d72">
 <head>
   <meta charset="utf-8">
