--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       <div role="list" class="w-dyn-items">
         <div role="listitem" class="featured-release w-dyn-item">
           <div style=
-          "background-image:url("/images/inertia-cover.jpg")"
+          "background-image:url("https://raw.githubusercontent.com/madewithrelume/mykeynotyours/main/images/8A7B81FD-797E-46EE-A234-5DFB6144E5E5.jpeg")"
           class="hero-parallax-background">
             <div class="parallax-overlay"></div>
           </div>
@@ -456,7 +456,7 @@
             role="listitem" class="release-item w-dyn-item">
               <div class="release-artwork-thumb">
                 <div style=
-                "background-image:url("https://assets.website-files.com/5e2128fe55fb42829c9b54d7/5e212c4ec2e5ff2e2e061ffc_Next%20Up.jpg");-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
+                "background-image:url("https://raw.githubusercontent.com/madewithrelume/mykeynotyours/main/images/5C9E82BC-B7EC-4326-B02D-9A53125E7099.jpeg");-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                 class="artwork-thumb-container"></div>
                 <p class="category-label featured-release">
                 Featured</p>
