--- a/alternate.html
+++ b/alternate.html
@@ -119,7 +119,7 @@
           <div class="text-parent">
             <div class="text-hide">
               <div class="sub-text">
-                save my soul
+                PRESS KIT
               </div>
             </div><a data-w-id=
             "00522d40-a06b-a718-2851-bc0e89fff879" href="/about"
@@ -131,7 +131,7 @@
           class="text-parent">
             <div class="text-hide">
               <div class="sub-text">
-                Work ep out Now
+                INERTIA EP OUT NOW
               </div>
             </div><a data-w-id=
             "b3d5f495-2642-5bd1-b83b-f42e135c9086" href="/music"
@@ -142,7 +142,7 @@
           <div class="text-parent">
             <div class="text-hide">
               <div class="sub-text">
-                Stay in the loop
+                WORK WITH ME
               </div>
             </div><a data-w-id=
             "bbcfb3ce-ee06-343f-49fe-46527513ec5a" href="/contact"
