Update and rename view-page-source.com-awge-2020.webflow.io_.html 2.txt to home.html

--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
 data-wf-status="1">
 <head>
   <meta charset="utf-8">
-  <title>AWGE, a creative agency founded by A$AP Rocky.</title>
-  <meta content="AWGE, a creative agency founded by A$AP Rocky."
+  <title>MYKEYNOTYOURS</title>
+  <meta content="A creative agency founded by MYKEY."
   property="og:title">
   <meta content="AWGE, a creative agency founded by A$AP Rocky."
   property="twitter:title">
@@ -49,12 +49,12 @@ data-wf-status="1">
             >
           </div>
           <h2 class="heading-3">PRESS START</h2></a>
-          <link rel="prerender" href="/home">
+          <link rel="prerender" href="/main">
         </div>
         <div class="landing-copyright wf-section">
           <div class="landing-copyright-container">
-            <h4 class="landing-copyright-text">©  2020
-             AWGE</h4>
+            <h4 class="landing-copyright-text">©  2022
+             MYKEYNOTYOURS</h4>
           </div>
         </div>
       </div>
