--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@ data-wf-status="1">
         "https://uploads-ssl.webflow.com/5ea6f1f7c09557e8d9baba5a/5ea6f5dc1d731141d20b7b2e_awge-header-logo-p-500.png 500w, https://uploads-ssl.webflow.com/5ea6f1f7c09557e8d9baba5a/5ea6f5dc1d731141d20b7b2e_awge-header-logo.png 720w"
         alt="" class="image"></div>
         <div class="landing-start wf-section">
-          <a href="/home" class=
+          <a href="/main" class=
           "landing-start-button w-inline-block">
           <div data-w-id="80b57687-ed2e-2bf6-7913-fb9230a20f81"
           style="opacity:1" class="landing-start-arrow">
