--- a/alternate.html
+++ b/alternate.html
@@ -79,9 +79,9 @@
     class="main-parent">
       <div class="footer-bar">
       <div class="social-links">
-        <a href="#" class="music-bar">FB</a> <a href="#" class=
+        <a href="#" class="music-bar">TW</a> <a href="#" class=
         "music-bar">_</a><a href="#" class=
-        "music-bar m-left">IN</a>
+        "music-bar m-left">IG</a>
       </div><img src=
       "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cfaa66d7f806b5f68d14206_beatport.png"
       width="100" alt="" class="beatport"><img src=
@@ -91,9 +91,16 @@
       "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cf99e9be1b65855eb9358b8_splash.png"
       width="186.5" alt="" class="splash"><img src=
       "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cf99e9be1b65800559358b9_jb-repeat.png"
-      alt="" class="n-repeat"><img src=
-      "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cf99e9ba2c631092c503bcf_joseph-berry.png"
+      alt="" class="n-repeat">
+
+
+<img src=
+      "https://raw.githubusercontent.com/madewithrelume/mykeynotyours/main/4E221AF4-F560-443F-9A66-8A9C6743476A.png"
       width="80" alt="" class="logo">
+
+
+
+
       <div class="bg-parent"><img src=
       "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cfabe0969080798b11e4015_img-1.png"
       width="356" srcset=
