--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
           <div class="text-parent">
             <div class="text-hide">
               <div class="sub-text">
-                PRESS KIT
+                SUPPORT THE BOY
               </div>
             </div><a data-w-id=
-            "00522d40-a06b-a718-2851-bc0e89fff879" href="/about"
-            class="main-link">About</a>
+            "00522d40-a06b-a718-2851-bc0e89fff879" href="/mykeynotyours/about"
+            class="main-link">Shop</a>
           </div><img src=
           "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cfab57fd8a215691800c9da_dash.png"
           width="105" alt="" class="spacer">
@@ -141,7 +141,7 @@
                 INERTIA EP OUT NOW
               </div>
             </div><a data-w-id=
-            "b3d5f495-2642-5bd1-b83b-f42e135c9086" href="/music"
+            "b3d5f495-2642-5bd1-b83b-f42e135c9086" href="/mykeynotyours/music"
             class="main-link">Music</a>
           </div><img src=
           "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cfab57fd8a215691800c9da_dash.png"
@@ -152,7 +152,7 @@
                 WORK WITH ME
               </div>
             </div><a data-w-id=
-            "bbcfb3ce-ee06-343f-49fe-46527513ec5a" href="/contact"
+            "bbcfb3ce-ee06-343f-49fe-46527513ec5a" href="/mykeynotyours/contact"
             class="main-link">Contact</a>
           </div>
         </div>
