--- a/contact.html
+++ b/contact.html
@@ -118,11 +118,11 @@
           <div data-w-id="2d05d29d-42ac-25b1-0f89-7c1ff76f5ce2">
             <div class="text-hide">
               <div class="sub-text">
-               Shoot Me An Email
+               info@mykeynotyours.com
               </div>
             </div><a href="#" data-w-id=
             "b3d5f495-2642-5bd1-b83b-f42e135c9086" class=
-            "main-link">info@mykeynotyours<span class="break">.com</span></a>
+            "main-link">LET'S <span class="break">WORK</span></a>
           </div>
           <div>
             <div class="text-hide"></div>
