--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="text-parent">
             <div class="text-hide">
               <div class="sub-text">
-                SUPPORT THE BOY
+                NEW MERCH COMING SOON
               </div>
             </div><a data-w-id=
             "00522d40-a06b-a718-2851-bc0e89fff879" href="/mykeynotyours/about"
@@ -142,7 +142,7 @@
               </div>
             </div><a data-w-id=
             "b3d5f495-2642-5bd1-b83b-f42e135c9086" href="/mykeynotyours/music"
-            class="main-link">Music</a>
+            class="main-link">Listen</a>
           </div><img src=
           "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cfab57fd8a215691800c9da_dash.png"
           width="105" alt="" class="spacer">
