--- a/music.html
+++ b/music.html
@@ -118,12 +118,12 @@
           <div data-w-id="2d05d29d-42ac-25b1-0f89-7c1ff76f5ce2">
             <div class="text-hide">
               <div class="sub-text">
-                Buy now from
+                Available On All Major Streaming Platforms
               </div>
             </div><a data-w-id=
             "b3d5f495-2642-5bd1-b83b-f42e135c9086" href=
-            "https://www.beatport.com/release/what-up/2617292"
-            target="_blank" class="main-link">Beatport</a>
+            "https://www.unitedmasters.com/a/mykeynotyours"
+            target="_blank" class="main-link">UNITEDMASTERS</a>
           </div>
           <div>
             <div class="text-hide"></div>
