--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
               </div>
             </div><a href="#" data-w-id=
             "b3d5f495-2642-5bd1-b83b-f42e135c9086" class=
-            "main-link">LET'S <span class="break">WORK</span></a>
+            "main-link">EMAIL<span class="break">.</span></a>
           </div>
           <div>
             <div class="text-hide"></div>
