--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
       "close w-inline-block"></a><img src=
       "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cf99e9be1b65800559358b9_jb-repeat.png"
       width="440" alt="" class="n-repeat"><img src=
-      "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cf99e9ba2c631092c503bcf_joseph-berry.png"
+      "https://raw.githubusercontent.com/madewithrelume/mykeynotyours/main/4E221AF4-F560-443F-9A66-8A9C6743476A.png"
       width="80" alt="" class="logo">
       <div data-w-id="c5f158ee-2e24-4d7a-09ca-34402fc3f847" class=
       "main-child">
@@ -122,7 +122,7 @@
               </div>
             </div><a href="#" data-w-id=
             "b3d5f495-2642-5bd1-b83b-f42e135c9086" class=
-            "main-link">EMAIL<span class="break">.</span></a>
+            "main-link">TALK TO ME</a>
           </div>
           <div>
             <div class="text-hide"></div>
