--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
           <div class="text-parent">
             <div class="text-hide">
               <div class="sub-text">
-                NEW MERCH COMING SOON
+                COMING SOON
               </div>
             </div><a data-w-id=
             "00522d40-a06b-a718-2851-bc0e89fff879" href="/mykeynotyours/about"
-            class="main-link">Shop</a>
+            class="main-link">Merch</a>
           </div><img src=
           "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cfab57fd8a215691800c9da_dash.png"
           width="105" alt="" class="spacer">
