--- a/music.html
+++ b/music.html
@@ -107,8 +107,8 @@
       "close w-inline-block"></a><img src=
       "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cf99e9be1b65800559358b9_jb-repeat.png"
       width="440" alt="" class="n-repeat"><img src=
-      "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cf99e9ba2c631092c503bcf_joseph-berry.png"
-      width="80" alt="" class="logo">
+      "https://raw.githubusercontent.com/madewithrelume/mykeynotyours/main/4E221AF4-F560-443F-9A66-8A9C6743476A.png"
+      width="80" alt="MYKEYNOTYOURS" class="logo">
       <div data-w-id="c5f158ee-2e24-4d7a-09ca-34402fc3f847" class=
       "main-child">
         <div class="main-grand-child">
