--- a/404.html
+++ b/404.html
@@ -10,6 +10,14 @@
     <link href="https://d3e54v103j8qbb.cloudfront.net/css/webflow-https-errors.webflow.css" rel="stylesheet" type="text/css">
 
     <link href="https://d3e54v103j8qbb.cloudfront.net/static/designer_favicon.5ea478d03e.png" rel="shortcut icon" type="image/x-icon">
+
+<style>
+
+.w-webflow-badge {
+visibility: hidden!important;
+display:none!important;
+</style>
+
 </head>
 
 <body>
