--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ display:none!important;
       </div><img src=
       "https://raw.githubusercontent.com/madewithrelume/mykeynotyours/main/4E221AF4-F560-443F-9A66-8A9C6743476A.png"
       width="100" alt="" class="beatport"><img src=
-      "https://raw.githubusercontent.com/mykeyfr/mykeynotyours/main/mykeynotyours.png"
+      "https://raw.githubusercontent.com/mykeyfr/mykeynotyours/main/TTFT.png"
       width="200" data-w-id="9a78f447-4cbd-cba9-382b-062b874ab20e"
-      alt="" class="c-text"></div><img src=
+      alt="TWICE THE FIRST TIME" class="c-text"></div><img src=
       "https://uploads-ssl.webflow.com/5cf99dd6e1b6589172935708/5cf99e9be1b65855eb9358b8_splash.png"
       width="186.5" alt="" class="splash"><img src=
       "https://raw.githubusercontent.com/mykeyfr/mykeynotyours/main/banner.png"
@@ -144,7 +144,7 @@ display:none!important;
           class="text-parent">
             <div class="text-hide">
               <div class="sub-text">
-                INERTIA EP OUT NOW
+                TWICE THE FIRST TIME
               </div>
             </div><a data-w-id=
             "b3d5f495-2642-5bd1-b83b-f42e135c9086" href="/mykeynotyours/music"
